--- a/index.html
+++ b/index.html
@@ -42,3 +42,8 @@
                     <button class="close" data-dismiss="modal">&times;</button>
                     <h3>Instructions</h#>
                   </div>
+                </center>
+
+                <script src="main.js"></script>
+                </body>
+                </html>
